@@ -2,5 +2,5 @@ FROM mayan31370/openjdk-alpine-with-chinese-timezone:8-jre
 ENV SPRING_CONFIG_URL http://localhost:8888/
 ENV SPRING_PROFILE test
 EXPOSE 8080
-ENTRYPOINT ["java","-XX:+UnlockExperimentalVMOptions","-XX:+UseCGroupMemoryLimitForHeap","-jar","-Dserver.port=8080","-Dspring.cloud.config.uri=${SPRING_CONFIG_URL}","-Dspring.profiles.active=${SPRING_PROFILE}","/app.jar"]
+ENTRYPOINT ["java","-Xms=128m","-Xmx=128m","-jar","-Dserver.port=8080","-Dspring.cloud.config.uri=${SPRING_CONFIG_URL}","-Dspring.profiles.active=${SPRING_PROFILE}","/app.jar"]
 ADD target/*.jar app.jar
